Convert Stage 1 tool calling from XML to JSON format
- Updated ToolCallParser to parse JSON in code blocks instead of XML tags
- Modified system prompt in SimpleAgent to teach JSON format
- Added comprehensive unit tests for JSON parsing (ToolCallParserTest)
- Updated IMPLEMENTATION_NOTES.md to reflect JSON format change
- All tests passing including integration tests with real Ollama backend

The new format uses:

Benefits:
- Standard JSON format widely understood by LLMs
- Native Gson parsing support in Java
- Type-safe and structured
- Flexible for nested parameters